--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,142 +4,140 @@
 
 /* Custom Palette */
 @theme {
-  /* Main colours */
-  --color-text: #0d0b0f;
-  --color-background: #f8f6f9;
-  --color-primary: #8959b1;
-  --color-secondary: #586f63;
-  --color-accent: #9b8b12;
+  /* Default (shortcut) aliases */
+  --color-primary: var(--color-primary-500);
+  --color-secondary: var(--color-secondary-500);
+  --color-accent: var(--color-accent-500);
+  --color-background: var(--color-background-50);
+  --color-text: var(--color-text-900);
 
-  /* Shades */
-  --color-text-50: #f3f0f4;
-  --color-text-100: #e6e1ea;
-  --color-text-200: #cec4d4;
-  --color-text-300: #b5a6bf;
-  --color-text-400: #9c89a9;
-  --color-text-500: #846b94;
-  --color-text-600: #695676;
-  --color-text-700: #4f4059;
-  --color-text-800: #352b3b;
-  --color-text-900: #1a151e;
-  --color-text-950: #0d0b0f;
+  /* === PRIMARY === */
+  --color-primary-50: #f1faec;
+  --color-primary-100: #dcf2d2;
+  --color-primary-200: #b7e4a3;
+  --color-primary-300: #91d673;
+  --color-primary-400: #6ac843;
+  --color-primary-500: #49ae28;
+  --color-primary-600: #3a8a20;
+  --color-primary-700: #2b6618;
+  --color-primary-800: #1c420f;
+  --color-primary-900: #0e2107;
 
-  --color-background-50: #f3f0f5;
-  --color-background-100: #e7e0eb;
-  --color-background-200: #cfc2d6;
-  --color-background-300: #b8a3c2;
-  --color-background-400: #a085ad;
-  --color-background-500: #886699;
-  --color-background-600: #6d527a;
-  --color-background-700: #523d5c;
-  --color-background-800: #36293d;
-  --color-background-900: #1b141f;
-  --color-background-950: #0e0a0f;
+  /* === SECONDARY === */
+  --color-secondary-50: #f6f1fa;
+  --color-secondary-100: #e7dbf2;
+  --color-secondary-200: #cfb7e5;
+  --color-secondary-300: #b892d8;
+  --color-secondary-400: #a06eca;
+  --color-secondary-500: #884abc;
+  --color-secondary-600: #6d3b96;
+  --color-secondary-700: #522c70;
+  --color-secondary-800: #371d4b;
+  --color-secondary-900: #1b0f25;
 
-  --color-primary-50: #f3eef7;
-  --color-primary-100: #e6dcef;
-  --color-primary-200: #cebade;
-  --color-primary-300: #b597ce;
-  --color-primary-400: #9d74be;
-  --color-primary-500: #8452ad;
-  --color-primary-600: #6a418b;
-  --color-primary-700: #4f3168;
-  --color-primary-800: #352145;
-  --color-primary-900: #1a1023;
-  --color-primary-950: #0d0811;
+  /* === ACCENT  === */
+  --color-accent-50: #e8f6ff;
+  --color-accent-100: #ccecff;
+  --color-accent-200: #99daff;
+  --color-accent-300: #66c8ff;
+  --color-accent-400: #33b6ff;
+  --color-accent-500: #0099e6;
+  --color-accent-600: #0077b3;
+  --color-accent-700: #005580;
+  --color-accent-800: #00334d;
+  --color-accent-900: #001a26;
 
-  --color-secondary-50: #f1f4f2;
-  --color-secondary-100: #e2e9e5;
-  --color-secondary-200: #c6d2cc;
-  --color-secondary-300: #a9bcb2;
-  --color-secondary-400: #8da599;
-  --color-secondary-500: #708f7f;
-  --color-secondary-600: #5a7266;
-  --color-secondary-700: #43564c;
-  --color-secondary-800: #2d3933;
-  --color-secondary-900: #161d19;
-  --color-secondary-950: #0b0e0d;
+  /* === BACKGROUND === */
+  --color-background-50: #fcfcfe;
+  --color-background-100: #f7f8fa;
+  --color-background-200: #edf0f2;
+  --color-background-300: #e2e7eb;
+  --color-background-400: #d8dee4;
+  --color-background-500: #ced5dc;
+  --color-background-600: #adb3b9;
+  --color-background-700: #8c9197;
+  --color-background-800: #6a6f74;
+  --color-background-900: #494d50;
 
-  --color-accent-50: #fcfae8;
-  --color-accent-100: #faf5d1;
-  --color-accent-200: #f4eba4;
-  --color-accent-300: #efe176;
-  --color-accent-400: #ead748;
-  --color-accent-500: #e4cd1b;
-  --color-accent-600: #b7a415;
-  --color-accent-700: #897b10;
-  --color-accent-800: #5b520b;
-  --color-accent-900: #2e2905;
-  --color-accent-950: #171403;
+  /* === TEXT === */
+  --color-text-50: #f8fafc;
+  --color-text-100: #e8edf1;
+  --color-text-200: #cdd4db;
+  --color-text-300: #b2bac5;
+  --color-text-400: #98a1af;
+  --color-text-500: #7d8799;
+  --color-text-600: #646c7a;
+  --color-text-700: #4b525c;
+  --color-text-800: #32363e;
+  --color-text-900: #191b1f;
 }
 .dark {
-  /* Main colours */
-  --color-text: #f2f0f4;
-  --color-background: #080609;
-  --color-primary: #7f4ea6;
-  --color-secondary: #90a79b;
-  --color-accent: #eddd64;
+  /* Default (shortcut) aliases */
+  --color-primary: var(--color-primary-500);
+  --color-secondary: var(--color-secondary-500);
+  --color-accent: var(--color-accent-400);
+  --color-background: var(--color-background-50);
+  --color-text: var(--color-text-900);
 
-  /* Shades */
-  --color-text-50: #0d0b0f;
-  --color-text-100: #1a151e;
-  --color-text-200: #352b3b;
-  --color-text-300: #4f4059;
-  --color-text-400: #695676;
-  --color-text-500: #846b94;
-  --color-text-600: #9c89a9;
-  --color-text-700: #b5a6bf;
-  --color-text-800: #cec4d4;
-  --color-text-900: #e6e1ea;
-  --color-text-950: #f3f0f4;
+  /* === PRIMARY === */
+  --color-primary-50: #10200b;
+  --color-primary-100: #1c3b14;
+  --color-primary-200: #2b6618;
+  --color-primary-300: #3a8a20;
+  --color-primary-400: #49ae28;
+  --color-primary-500: #6ac843;
+  --color-primary-600: #91d673;
+  --color-primary-700: #b7e4a3;
+  --color-primary-800: #dcf2d2;
+  --color-primary-900: #f1faec;
 
-  --color-background-50: #0e0a0f;
-  --color-background-100: #1b141f;
-  --color-background-200: #36293d;
-  --color-background-300: #523d5c;
-  --color-background-400: #6d527a;
-  --color-background-500: #886699;
-  --color-background-600: #a085ad;
-  --color-background-700: #b8a3c2;
-  --color-background-800: #cfc2d6;
-  --color-background-900: #e7e0eb;
-  --color-background-950: #f3f0f5;
+  /* === SECONDARY === */
+  --color-secondary-50: #1b0f25;
+  --color-secondary-100: #2e1840;
+  --color-secondary-200: #522c70;
+  --color-secondary-300: #6d3b96;
+  --color-secondary-400: #884abc;
+  --color-secondary-500: #a06eca;
+  --color-secondary-600: #b892d8;
+  --color-secondary-700: #cfb7e5;
+  --color-secondary-800: #e7dbf2;
+  --color-secondary-900: #f6f1fa;
 
-  --color-primary-50: #0d0811;
-  --color-primary-100: #1a1023;
-  --color-primary-200: #352145;
-  --color-primary-300: #4f3168;
-  --color-primary-400: #6a418b;
-  --color-primary-500: #8452ad;
-  --color-primary-600: #9d74be;
-  --color-primary-700: #b597ce;
-  --color-primary-800: #cebade;
-  --color-primary-900: #e6dcef;
-  --color-primary-950: #f3eef7;
+  /* === ACCENT === */
+  --color-accent-50: #001a26;
+  --color-accent-100: #00334d;
+  --color-accent-200: #005580;
+  --color-accent-300: #0077b3;
+  --color-accent-400: #0099e6;
+  --color-accent-500: #33b6ff;
+  --color-accent-600: #66c8ff;
+  --color-accent-700: #99daff;
+  --color-accent-800: #ccecff;
+  --color-accent-900: #e8f6ff;
 
-  --color-secondary-50: #0b0e0d;
-  --color-secondary-100: #161d19;
-  --color-secondary-200: #2d3933;
-  --color-secondary-300: #43564c;
-  --color-secondary-400: #5a7266;
-  --color-secondary-500: #708f7f;
-  --color-secondary-600: #8da599;
-  --color-secondary-700: #a9bcb2;
-  --color-secondary-800: #c6d2cc;
-  --color-secondary-900: #e2e9e5;
-  --color-secondary-950: #f1f4f2;
+  /* === BACKGROUND === */
+  --color-background-50: #0a0a0b;
+  --color-background-100: #141516;
+  --color-background-200: #1f2022;
+  --color-background-300: #292b2d;
+  --color-background-400: #343638;
+  --color-background-500: #3e4043;
+  --color-background-600: #5e6064;
+  --color-background-700: #7d8085;
+  --color-background-800: #9da0a6;
+  --color-background-900: #bdbfc7;
 
-  --color-accent-50: #171403;
-  --color-accent-100: #2e2905;
-  --color-accent-200: #5b520b;
-  --color-accent-300: #897b10;
-  --color-accent-400: #b7a415;
-  --color-accent-500: #e4cd1b;
-  --color-accent-600: #ead748;
-  --color-accent-700: #efe176;
-  --color-accent-800: #f4eba4;
-  --color-accent-900: #faf5d1;
-  --color-accent-950: #fcfae8;
+  /* === TEXT === */
+  --color-text-50: #191b1f;
+  --color-text-100: #32363e;
+  --color-text-200: #4b525c;
+  --color-text-300: #646c7a;
+  --color-text-400: #7d8799;
+  --color-text-500: #98a1af;
+  --color-text-600: #b2bac5;
+  --color-text-700: #cdd4db;
+  --color-text-800: #e8edf1;
+  --color-text-900: #f8fafc;
 }
 
 @layer base {
@@ -150,8 +148,11 @@
     scroll-padding-top: 8rem;
   }
 
-  /* Universal focus styles */
-  :focus {
+  /* only show when keyboard navigating */
+  :focus-visible {
     @apply outline-none ring-2 ring-gray-400 rounded-md;
+  }
+  :focus {
+    @apply outline-none;
   }
 }
